# numeric_array

./: CMakeLists.txt  README.md
benchmark/: basic_benchmark.cpp  basic_benchmark.s  strided_benchmark.cpp
include/echo/: numeric_array.h
include/echo/numeric_array/: concept.h  conversion_evaluator.h  copy.h  evaluator.h  expression.h  expression_template_tag.h  flatten_evaluator.h  fuse_evaluator.h  initializer.h  iteration.h  map_evaluator.h  map_expression.h  map_index.h  map_index_evaluator.h  map_index_expression.h  map_indexes_evaluator.h  map_indexes_expression.h  null_dimensionality.h  null_shape.h  numeric_array.h  numeric_array_accessor.h  numeric_array_evaluator.h  numeric_array_executer.h  numeric_array_fwd.h  numeric_array_initializer.h  numeric_array_traits.h  numeric_array_view.h  numeric_array_view_fwd.h  numeric_subarray.h  numeric_subarray_evaluator.h  print.h  reduction_expression.h  scalar_evaluator.h  slice.h  structure.h  structure_traits.h  test.h  utility.h
unittest/: concept_test.cpp  evaluator_test.cpp  expression_test.cpp  map_index_evaluator_test.cpp  map_index_expression_test.cpp  map_indexes_evaluator_test.cpp  map_indexes_expression_test.cpp  numeric_array_test.cpp
